some changes for babel and sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "Тестовый пример": "Test example",
   "Перевод": "Translate",
   "Язык": "English",
+  "Короткий Язык": "En",
   "Привет мир": "Hello world"
 }
