--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Язык": "Русский",
+  "Короткий Язык": "Ru",
   "Привет мир": "Привет мир"
 }
