update sidebar babel and i18n

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,10 @@
 {
-  "Тестовый пример": "Test example",
-  "Перевод": "Translate",
-  "Язык": "English",
+  "Главная": "Main",
+  "Главная страница": "Главная страница",
   "Короткий Язык": "En",
-  "Привет мир": "Hello world"
+  "О сайте": "About us",
+  "Обновить страницу": "Обновить страницу",
+  "Произошла ошибка!": "Произошла ошибка!",
+  "Страница не найдена": "Страница не найдена",
+  "Язык": "Язык"
 }
