--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,10 @@
 {
-  "Тестовый пример": "Тестовый пример",
-  "Перевод": "Перевод",
-  "Язык": "Русский",
+  "Главная": "Главная",
+  "Главная страница": "Главная страница",
   "Короткий Язык": "Ru",
-  "Привет мир": "Привет мир"
+  "О сайте": "О сайте",
+  "Обновить страницу": "Обновить страницу",
+  "Произошла ошибка!": "Произошла ошибка!",
+  "Страница не найдена": "Страница не найдена",
+  "Язык": "Язык"
 }
