--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,12 @@
 {
+  "": "",
+  "Войти": "Войти",
   "Главная": "Main",
+  "Главная страница": "Главная страница",
   "Короткий Язык": "En",
   "О сайте": "About us",
+  "Обновить страницу": "Обновить страницу",
+  "Произошла ошибка!": "Произошла ошибка!",
   "Страница не найдена": "Страница не найдена",
   "Язык": "Язык"
 }
