--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,6 @@
 {
+  "Password": "Password",
+  "Username": "Username",
   "Войти": "Войти",
   "Главная": "Главная",
   "Главная страница": "Главная страница",
