--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
+  "Password": "Password",
+  "Username": "Username",
   "Войти": "Войти",
   "Главная": "Main",
   "Главная страница": "Главная страница",
