custom input and some updates

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,8 @@
 {
   "Password": "Password",
   "Username": "Username",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль",
   "Войти": "Войти",
   "Главная": "Main",
   "Главная страница": "Главная страница",
