--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "Login failed": "Login failed",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
@@ -7,7 +8,9 @@
   "Короткий Язык": "En",
   "О сайте": "About us",
   "Обновить страницу": "Обновить страницу",
+  "Ошибка авторизации": "Ошибка авторизации",
   "Произошла ошибка!": "Произошла ошибка!",
   "Страница не найдена": "Страница не найдена",
+  "Форма регистрации": "Форма регистрации",
   "Язык": "Язык"
 }
