add login module

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
-  "Login failed": "Login failed",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Главная": "Main",
   "Главная страница": "Главная страница",
   "Короткий Язык": "En",
