--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,8 @@
 {
-  "Login failed": "Login failed",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Главная": "Главная",
   "Главная страница": "Главная страница",
   "Короткий Язык": "Ru",
