--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "ProfilePage": "ProfilePage",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
@@ -7,9 +8,11 @@
   "Главная страница": "Главная страница",
   "Короткий Язык": "Ru",
   "О сайте": "О сайте",
+  "О себе": "О себе",
   "Обновить страницу": "Обновить страницу",
   "Ошибка авторизации": "Ошибка авторизации",
   "Произошла ошибка!": "Произошла ошибка!",
+  "Профиль": "Профиль",
   "Страница не найдена": "Страница не найдена",
   "Форма регистрации": "Форма регистрации",
   "Язык": "Язык"
