fix some problems with ts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
-  "ProfilePage": "ProfilePage",
+  "Ваша фамилия": "Ваша фамилия",
+  "Ваше имя": "Ваше имя",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
@@ -11,8 +12,10 @@
   "О себе": "О себе",
   "Обновить страницу": "Обновить страницу",
   "Ошибка авторизации": "Ошибка авторизации",
+  "Ошибка при получении данных профиля": "Ошибка при получении данных профиля",
   "Произошла ошибка!": "Произошла ошибка!",
   "Профиль": "Профиль",
+  "Редактировать": "Редактировать",
   "Страница не найдена": "Страница не найдена",
   "Форма регистрации": "Форма регистрации",
   "Язык": "Язык"
