add profile page, new common components

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,22 +1,32 @@
 {
+  "Ваш возраст": "Ваш возраст",
   "Ваша фамилия": "Ваша фамилия",
   "Ваше имя": "Ваше имя",
   "Введите username": "Введите username",
+  "Введите имя пользователя": "Введите имя пользователя",
   "Введите пароль": "Введите пароль",
+  "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Войти": "Войти",
   "Выйти": "Выйти",
   "Главная": "Main",
   "Главная страница": "Главная страница",
+  "Город": "Город",
   "Короткий Язык": "En",
   "О сайте": "About us",
   "О себе": "О себе",
   "Обновить страницу": "Обновить страницу",
+  "Отменить": "Отменить",
   "Ошибка авторизации": "Ошибка авторизации",
   "Ошибка при получении данных профиля": "Ошибка при получении данных профиля",
+  "Попробуйте обновить страницу!": "Попробуйте обновить страницу!",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
   "Произошла ошибка!": "Произошла ошибка!",
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
+  "Сохранить": "Сохранить",
   "Страница не найдена": "Страница не найдена",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну",
   "Форма регистрации": "Форма регистрации",
   "Язык": "Язык"
 }
