--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,7 +11,11 @@
   "Главная": "Главная",
   "Главная страница": "Главная страница",
   "Город": "Город",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
   "Короткий Язык": "Ru",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион",
   "О сайте": "О сайте",
   "О себе": "О себе",
   "Обновить страницу": "Обновить страницу",
@@ -23,6 +27,7 @@
   "Произошла ошибка!": "Произошла ошибка!",
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
   "Сохранить": "Сохранить",
   "Страница не найдена": "Страница не найдена",
   "Укажите валюту": "Укажите валюту",
